@@ -3430,3 +3430,14 @@ div.v-subheader {
  display:inline-block;
  border-radius:4px;
 }
+
+.choice-key {
+ text-align:center!important;
+ font-size:75%;
+ opacity:var(--sub-opacity);
+ width:16px;
+ margin-left:-8px;
+ margin-right:8px;
+ border-radius:4px;
+ background-color:var(--image-background-color);
+}
