@@ -18,6 +18,7 @@ Vue.component('lms-dstm-dialog', {
       <v-list class="sleep-list dialog-main-list">
        <template v-for="(item, index) in items">
         <v-list-tile @click="setDstm(item.key)">
+         <div :tile="true" v-if="boundKeys" class="choice-key">{{9==index ? 0 : index+1}}</div>
          <v-list-tile-avatar><v-icon small>{{item.selected ? 'radio_button_checked' :'radio_button_unchecked'}}</v-icon></v-list-tile-avatar>
          <v-list-tile-content>{{item.label}}</v-list-tile-content>
         </v-list-tile>
@@ -39,11 +40,13 @@ Vue.component('lms-dstm-dialog', {
     data() {
         return {
             show: false,
-            items:[]
+            items:[],
+            boundKeys: false
         }
     },
     mounted() {
         bus.$on('dstm.open', function() {
+            this.boundKeys = false;
             if (LMS_P_DSTM) {
                 lmsCommand(this.$store.state.player.id, ["dontstopthemusicsetting"]).then(({data}) => {
                     if (data.result && data.result.item_loop) {
@@ -53,39 +56,37 @@ Vue.component('lms-dstm-dialog', {
                                 this.items.push({key: loop[i].actions.do.cmd[2], label:loop[i].text, selected:1===loop[i].radio});
                             }
                         }
+                        bindNumeric(this);
                         this.show=true;
                     }
                 });
             }
         }.bind(this));
         bus.$on('noPlayers', function() {
-            this.show=false;
+            this.cancel();
         }.bind(this));
         bus.$on('closeDialog', function(dlg) {
             if (dlg == 'dstm') {
-                this.show=false;
+                this.cancel();
             }
         }.bind(this));
+        handleNumeric(this, this.setDstm, 'key');
     },
     methods: {
         cancel() {
             this.show=false;
+            unbindNumeric(this);
         },
         setDstm(value) {
             bus.$emit("dstm", this.$store.state.player.id, value);
             this.show=false;
+            unbindNumeric(this);
         },
         i18n(str, arg) {
             if (this.show) {
                 return i18n(str, arg);
             } else {
                 return str;
-            }
-        },
-        cancelTimer() {
-            if (undefined!==this.timer) {
-                clearInterval(this.timer);
-                this.timer = undefined;
             }
         }
     },
