@@ -553,3 +553,40 @@ function setListElemClass(child, clz, add) {
         }
     }
 }
+
+function bindNumeric(dlg) {
+    dlg.boundKeys = false;
+    if (!IS_MOBILE && dlg.items.length<=10 && dlg.$store.state.keyboardControl) {
+        for (let i=0, len=dlg.items.length; i<len; ++i) {
+            bindKey(""+(i<9 ? i+1 : 0));
+        }
+        dlg.boundKeys=true;
+    }
+}
+
+function unbindNumeric(dlg) {
+    if (!IS_MOBILE && dlg.items.length<=10 && dlg.boundKeys) {
+        for (let i=0, len=dlg.items.length; i<len; ++i) {
+            unbindKey(""+(i<9 ? i+1 : 0));
+        }
+    }
+    dlg.boundKeys = false;
+}
+
+function handleNumeric(dlg, func, itemKey) {
+    bus.$on('keyboard', function(key, modifier) {
+        if (dlg.show && dlg.boundKeys && undefined==modifier) {
+            let val = parseInt(key);
+            if ((""+val)==key) {
+                if (0==val) {
+                    val=9;
+                } else {
+                    val--;
+                }
+                if (val>=0 && val<dlg.items.length) {
+                    func(undefined==itemKey ? dlg.items[val] : dlg.items[val][itemKey]);
+                }
+            }
+        }
+    }.bind(dlg));
+}
