@@ -14,6 +14,8 @@
 11. Add some album related actions to sub-toolbar of album review.
 12. Remove add/play acitons form toolbar when navigating into genre from genre
     link.
+13. If 10 or less items in a 'choice' dialog then allow using numeric keys as
+    shortcut.
 
 4.1.5
 -----
